--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "mittt": "^2.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-forceupdate": "^0.3.4",
     "react-loading-icons": "^1.1.0",
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
